--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,15 +5,8 @@
 <footer id="footer">
   <div class="container">
     <div class="left-section">
-      <a class="logo" href="/"
-        ><img
-          loading="lazy"
-          decoding="async"
-          src="/assets/images/logo.jpeg"
-          alt="logo"
-          width="264"
-          height="78"
-      /></a>
+      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo.jpg" alt="logo" width="264"
+          height="78" /></a>
     </div>
     <div class="right-section">
       <div class="lists">
@@ -36,23 +29,22 @@
           <li>
             <h2>Services</h2>
           </li>
-          <li><a href="/bookkeeping/">Bookkeeping</a></li>
-          <li><a href="/financial-clean-up/">Financial Clean-Up</a></li>
-          <li><a href="/quickbooks/">QuickBooks Services</a></li>
-          <li><a href="/payroll/">Payroll Services</a></li>
+          <li><a href="/electrical-installations/">Installations</a></li>
+          <li><a href="/generator-installation-maintenance/">Generators</a></li>
+          <li><a href="/led-lighting-upgrades-outdoor-lighting-repair/">Lighting</a></li>
         </ul>
         <ul>
           <li>
             <h2>Contact</h2>
           </li>
-          <!-- <li>
-                        <a href="/contact">First Address Line<br>Denver CO 80206</a>
-                    </li> -->
           <li>
-            <a href="tel:248-778-8130">Tel: (248) 778-8130 </a>
+            <a href="/contact">401 Elmwood Drive, Troy, MI,<br> United States, Michigan</a>
           </li>
           <li>
-            <a href="mailto:halford-bookkeeping@outlook.com">Click to Email</a>
+            <a href="tel:810-459-6302">Tel: (810) 459-6302 </a>
+          </li>
+          <li>
+            <a href="mailto:Morepowerelectricllc@gmail.com">Click to Email</a>
           </li>
         </ul>
       </div>
@@ -61,9 +53,7 @@
 
   <div class="credit">
     <span>Designed and Hand Coded by</span>
-    <a href="www.kalamazoowebsitedesign.com" target="_blank" rel="noopener"
-      >Kalamazoo Website Design</a
-    >
+    <a href="www.kalamazoowebsitedesign.com" target="_blank" rel="noopener">Kalamazoo Website Design</a>
     <span class="copyright"> Copyright 2025 - Present</span>
   </div>
 </footer>
