--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,15 +5,8 @@
 <footer id="footer">
   <div class="container">
     <div class="left-section">
-      <a class="logo" href="/"
-        ><img
-          loading="lazy"
-          decoding="async"
-          src="/assets/images/logo.jpg"
-          alt="logo"
-          width="264"
-          height="78"
-      /></a>
+      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo.webp" alt="logo"
+          width="264" height="78" /></a>
     </div>
     <div class="right-section">
       <div class="lists">
@@ -38,23 +31,18 @@
           <li>
             <h2>Services</h2>
           </li>
-          <li><a href="/electrical-installations/">Installations</a></li>
-          <li><a href="/generator-installation-maintenance/">Generators</a></li>
-          <li>
-            <a href="/led-lighting-upgrades-outdoor-lighting-repair/"
-              >Lighting</a
-            >
-          </li>
+          <li><a href="/junk-removal/">Junk Removal</a></li>
+          <li><a href="/furniture-hauling/">Furniture Hauling</a></li>
+          <li><a href="/appliance-disposal/">Appliance Disposal</a></li>
+          <li><a href="/yard-waste/">Yard Waste</a></li>
         </ul>
         <ul>
           <li>
             <h2>Contact</h2>
           </li>
           <li>
-            <a href="/contact"
-              >401 Elmwood Drive, Troy, MI,<br />
-              United States, Michigan</a
-            >
+            <a href="/contact">401 Elmwood Drive, Troy, MI,<br />
+              United States, Michigan</a>
           </li>
           <li>
             <a href="tel:810-459-6302">Tel: (810) 459-6302 </a>
@@ -69,9 +57,7 @@
 
   <div class="credit">
     <span>Designed and Hand Coded by</span>
-    <a href="www.kalamazoowebsitedesign.com" target="_blank" rel="noopener"
-      >Kalamazoo Website Design</a
-    >
+    <a href="www.kalamazoowebsitedesign.com" target="_blank" rel="noopener">Kalamazoo Website Design</a>
     <span class="copyright"> Copyright 2025 - Present</span>
   </div>
 </footer>
