--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -14,11 +14,11 @@
         <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
         <a class="logo" aria-label="click to go to home page" href="/">
             <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-            <img class="light" aria-hidden="true" src="/assets/images/logo.jpg" decoding="async" alt="logo" width="221"
+            <img class="light" aria-hidden="true" src="/assets/images/logo.webp" decoding="async" alt="logo" width="221"
                 height="66">
 
             <!--Dark Colored Logo-->
-            <img class="dark" aria-hidden="true" src="/assets/images/logo.jpg" decoding="async" loading="lazy"
+            <img class="dark" aria-hidden="true" src="/assets/images/logo.webp" decoding="async" loading="lazy"
                 alt="logo" width="221" height="66">
         </a>
 
@@ -38,10 +38,10 @@
                         {{ entry.title }}
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/electrical-installations/">Electrical Installations</a></li>
-                        <li><a href="/generator-installation-maintenance/">Generator Installation & Maintenance</a></li>
-                        <li><a href="/led-lighting-upgrades-outdoor-lighting-repair/">LED Lighting Upgrades & Outdoor
-                                Lighting Repair</a></li>
+                        <li><a href="/junk-removal/">Junk Removal</a></li>
+                        <li><a href="/furniture-hauling/">Furniture Hauling</a></li>
+                        <li><a href="/appliance-disposal/">Appliance Disposal</a></li>
+                        <li><a href="/yard-waste/">Yard Waste</a></li>
                     </ul>
 
                     {% else %}
