--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,8 +5,8 @@
 <footer id="footer">
   <div class="container">
     <div class="left-section">
-      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo.webp" alt="logo"
-          width="264" height="78" /></a>
+      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo.webp"
+          alt="Junk Force Michigan logo" width="264" height="78" /></a>
     </div>
     <div class="right-section">
       <div class="lists">
@@ -21,7 +21,7 @@
             <a href="/about">About Us</a>
           </li>
           <li>
-            <a href="/projects">Projects</a>
+            <a href="/services">Services</a>
           </li>
           <li>
             <a href="/contact">Contact</a>
@@ -29,26 +29,25 @@
         </ul>
         <ul>
           <li>
-            <h2>Services</h2>
+            <h2>Our Services</h2>
           </li>
-          <li><a href="/junk-removal/">Junk Removal</a></li>
+          <li><a href="/junk-removal/">Junk Removal Service</a></li>
           <li><a href="/furniture-hauling/">Furniture Hauling</a></li>
           <li><a href="/appliance-disposal/">Appliance Disposal</a></li>
-          <li><a href="/yard-waste/">Yard Waste</a></li>
+          <li><a href="/yard-waste/">Yard Waste Removal</a></li>
         </ul>
         <ul>
           <li>
             <h2>Contact</h2>
           </li>
           <li>
-            <a href="/contact">401 Elmwood Drive, Troy, MI,<br />
-              United States, Michigan</a>
+            <a href="/contact">Berkley, Michigan</a>
           </li>
           <li>
-            <a href="tel:810-459-6302">Tel: (810) 459-6302 </a>
+            <a href="tel:313-444-9540">Tel: (313) 444-9540</a>
           </li>
           <li>
-            <a href="mailto:Morepowerelectricllc@gmail.com">Click to Email</a>
+            <a href="mailto:mike@junkforcemichigan.com">mike@junkforcemichigan.com</a>
           </li>
         </ul>
       </div>
