--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -24,6 +24,9 @@
             <a href="/services">Services</a>
           </li>
           <li>
+            <a href="/projects">Projects</a>
+          </li>
+          <li>
             <a href="/contact">Contact</a>
           </li>
         </ul>
