--- a/src/css/root.css
+++ b/src/css/root.css
@@ -280,12 +280,12 @@
   }
   #navigation .logo {
     display: inline-block;
-    height: 1.875rem;
+    height: 40px;
     width: auto;
   }
   #navigation .logo img {
-    width: auto;
-    height: 100%;
+    width: 30px;
+    height: 40px;
   }
   #navigation .logo .light {
     display: none;
