Updated about us image

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -59,7 +59,7 @@
 
   <div class="credit">
     <span>Designed and Hand Coded by</span>
-    <a href="www.kalamazoowebsitedesign.com" target="_blank" rel="noopener">Kalamazoo Website Design</a>
+    <a href="https://www.kalamazoowebsitedesign.com" target="_blank" rel="noopener">Kalamazoo Website Design</a>
     <span class="copyright"> Copyright 2025 - Present</span>
   </div>
 </footer>
