--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -21,24 +21,30 @@
     <meta property="og:image:secure_url" content="" />
     <meta name="twitter:card" content="summary" />
 
-   <!-- Favicons -->
-<!-- Light -->
-<link rel="icon" href="/assets/favicons/light/favicon.ico" media="(prefers-color-scheme: light)">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/light/favicon-32x32.png" media="(prefers-color-scheme: light)">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/light/favicon-16x16.png" media="(prefers-color-scheme: light)">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/light/apple-touch-icon.png" media="(prefers-color-scheme: light)">
-<link rel="manifest" href="/assets/favicons/light/site.webmanifest" media="(prefers-color-scheme: light)">
+    <!-- Favicons -->
+    <!-- Light -->
+    <link rel="icon" href="/assets/favicons/light/favicon.ico" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/light/favicon-32x32.png"
+        media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/light/favicon-16x16.png"
+        media="(prefers-color-scheme: light)">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/light/apple-touch-icon.png"
+        media="(prefers-color-scheme: light)">
+    <link rel="manifest" href="/assets/favicons/light/site.webmanifest" media="(prefers-color-scheme: light)">
 
-<!-- Dark -->
-<link rel="icon" href="/assets/favicons/dark/favicon.ico" media="(prefers-color-scheme: dark)">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/dark/favicon-32x32.png" media="(prefers-color-scheme: dark)">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/dark/favicon-16x16.png" media="(prefers-color-scheme: dark)">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/dark/apple-touch-icon.png" media="(prefers-color-scheme: dark)">
-<link rel="manifest" href="/assets/favicons/dark/site.webmanifest" media="(prefers-color-scheme: dark)">
+    <!-- Dark -->
+    <link rel="icon" href="/assets/favicons/dark/favicon.ico" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/dark/favicon-32x32.png"
+        media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/dark/favicon-16x16.png"
+        media="(prefers-color-scheme: dark)">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/dark/apple-touch-icon.png"
+        media="(prefers-color-scheme: dark)">
+    <link rel="manifest" href="/assets/favicons/dark/site.webmanifest" media="(prefers-color-scheme: dark)">
 
-<!-- Windows tiles -->
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+    <!-- Windows tiles -->
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
 
 
