--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,8 +5,11 @@
 <footer id="footer">
   <div class="container">
     <div class="left-section">
-      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo_dark.png"
-          alt="Junk Force Michigan logo" width="264" height="78" /></a>
+      <a class="logo" href="/">
+        <!-- <img loading="lazy" decoding="async" src="/assets/images/logo_dark.png" alt="Traverse City Handy logo"
+          width="264" height="78" /> -->
+        LOGO HERE
+      </a>
     </div>
     <div class="right-section">
       <div class="lists">
@@ -21,10 +24,7 @@
             <a href="/about">About Us</a>
           </li>
           <li>
-            <a href="/services">Services</a>
-          </li>
-          <li>
-            <a href="/projects">Projects</a>
+            <a href="/carpentry">Services</a>
           </li>
           <li>
             <a href="/contact">Contact</a>
@@ -34,24 +34,26 @@
           <li>
             <h2>Our Services</h2>
           </li>
-          <li><a href="/junk-removal/">Junk Removal Service</a></li>
-          <li><a href="/furniture-hauling/">Furniture Hauling</a></li>
-          <li><a href="/appliance-disposal/">Appliance Disposal</a></li>
-          <li><a href="/yard-waste/">Yard Waste Removal</a></li>
+          <li><a href="/carpentry/">Carpentry</a></li>
+          <li><a href="/bath-kitchen-remodel/">Bath and Kitchen Remodel</a></li>
+          <li><a href="/painting/">
+              Painting</a></li>
+          <li><a href="/trim/">Trim</a></li>
         </ul>
         <ul>
           <li>
             <h2>Contact</h2>
           </li>
           <li>
-            <a href="/contact">Berkley, Michigan</a>
+            <a href="/contact">Traverse City, Michigan</a>
           </li>
           <li>
-            <a href="tel:313-444-9540">Tel: (313) 444-9540</a>
+            <a href="tel:269-857-8000">Tel: (269) 857-8000</a>
           </li>
           <li>
-            <a href="mailto:mike@junkforcemichigan.com">mike@junkforcemichigan.com</a>
+            <a href="mailto:jobs@MichiganHandy.com">jobs@MichiganHandy.com</a>
           </li>
+
         </ul>
       </div>
     </div>
